# SEO-keyword-collector

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  upload_to_github.bat
analyzers/: __init__.py  classifier.py  cleaner.py  clusterer.py  intent_analyzer.py  page_mapper.py
collectors/: __init__.py  alibaba_collector.py  amazon_collector.py  base_collector.py  bing_collector.py  competitor_collector.py  forum_collector.py  google_collector.py  madeinchina_collector.py  trends_collector.py  youtube_collector.py
config/: __init__.py  settings.py
exporters/: __init__.py  csv_exporter.py  summary_exporter.py
