[project]
name = "seo-keyword-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "playwright>=1.59.0",
    "python-dotenv>=1.2.2",
    "pytrends>=4.9.2",
    "requests>=2.34.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]
